...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/beachButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickBeach"
        android:text="Beach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/restaurantButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickRestaurant"
        android:text="Restaurant"
...
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginEnd="168dp"-->
    <!--        android:layout_marginBottom="524dp"-->
    <!--        android:onClick="onClickRoute"-->
    <!--        android:text="Navigate"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/rangeChoice" />-->

    <Spinner
        android:id="@+id/rangeChoice"
        android:layout_width="126dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
...
