<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lavender_background"
    tools:context=".RestaurantPage">

    <TextView
        android:id="@+id/restaurant1"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="61dp"
        android:gravity="center"
        android:text="Restaurant Name"
        android:textColor="@color/lavender"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="45dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonRestaurant"
        android:layout_width="87dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/lavender"
        android:text="Back"
        android:onClick="onReturn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        app:layout_constraintVertical_bias="0.656" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="368dp"
        android:layout_height="53dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="71dp"
        android:gravity="center"
        android:text="Hours"
        android:textStyle="bold"
        android:textColor="@color/lavender"
        android:fontFamily="cursive"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="360dp"
        android:layout_height="317dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:gravity="center"
        android:maxLines="15"
        android:scrollbars="vertical"
        android:text="TextView"
        android:textSize="18dp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="Menu"
        android:textSize="20dp"
        android:fontFamily="cursive"
        android:textColor="@color/lavender"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>