<resources>
    <string name="app_name">Beach4Life</string>
    <string name="curr_user_key">user0</string>
    <string name="title_activity_beach_trip">BeachTripActivity</string>
    <string-array name="ranges">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
    </string-array>
    <string name="welcome"><i><b>Welcome!</b></i></string>
    <string name="info">==Beach Info==</string>
    <string name="profile"><i><b>==My Profile==</b></i></string>
    <string name="my_review"><i><b>My Review</b></i></string>
    <string name="name_prompt"><i><b>Name</b></i></string>
    <string name="email_prompt"><i><b>Email</b></i></string>
    <string name="pwd_prompt"><i><b>Password</b></i></string>
    <string name="IsAnonymous">Is Anonymous:</string>
    <string name="rating">Rating:</string>
    <string name="Content">Content</string>
    <string name="star">\u2605</string>
    <string name = "half_star">\u2BEA</string>
    <string-array name = "beaches">
        <item>Marina Beach</item>
        <item>Venice Beach</item>
        <item>Santa Monica State Beach</item>
        <item>Manhattan Beach</item>
        <item>Cabrillo Beach</item>
        <item>Alamitos Beach</item>
    </string-array>
</resources>