...
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationFieldView" />

    <TextView
        android:id="@+id/nameFieldView"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:text="TextView"
        android:textAlignment="center"
...
